--- a/exercicios-js/node/funcionarios/package.json
+++ b/exercicios-js/node/funcionarios/package.json
@@ -2,15 +2,12 @@
   "name": "funcionarios",
   "version": "1.0.0",
   "description": "Apenas um teste",
-  "main": "outro.js",
+  "main": "funcionarios.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "Apenas",
-    "um",
-    "teste"
-  ],
+  "keywords": [],
   "author": "Leonam Oliveira",
   "license": "ISC",
   "dependencies": {
